bugfix background image white space

--- a/static/styles/page.css
+++ b/static/styles/page.css
@@ -1,13 +1,13 @@
 #page {
-    background-image: url("../images/svg/Hexagon.svg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     width: 100%;
     height: 100%;
     filter: saturate(75%);
     display: flex;
 }
+body{
+    background: url("../images/svg/hexagon.svg");
+    background-attachment: fixed;
+    }
 #page .container {
     position: sticky;
     bottom: 0;
